--- a/.github/workflows/push_test.yml
+++ b/.github/workflows/push_test.yml
@@ -6,4 +6,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: ech hi there
+      - run: echo hi there
