--- a/.github/workflows/push_test.yml
+++ b/.github/workflows/push_test.yml
@@ -7,3 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: echo hi there
+      - run: |
+        eval `ssh-agent -s`
+        ssh-add - <<< '${{ secrets.PYTKET_BENCHMARKING_DEPLOY_KEY }}'
+      - run: git clone git@github.com:CQCL/pytket-benchmarking.git
