--- a/.github/workflows/push_test.yml
+++ b/.github/workflows/push_test.yml
@@ -5,8 +5,11 @@ jobs:
   check-all-valid:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           ssh-key: ${{ secrets.PYTKET_BENCHMARKING_DEPLOY_KEY }}
           repository: CQCL/pytket-benchmarking
+      - run: ls
+      - run: pip install .
+      - uses: actions/checkout@v4
       - run: ls
