--- a/.github/workflows/push_test.yml
+++ b/.github/workflows/push_test.yml
@@ -1,15 +1,19 @@
 name: push-tests
 run-name: Push Tests
-on: [push]
+on: [push, pull_request]
 jobs:
   check-all-valid:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+
+      - name: Checkout pytket_benchmarking
+        uses: actions/checkout@v4
         with:
           ssh-key: ${{ secrets.PYTKET_BENCHMARKING_DEPLOY_KEY }}
           repository: CQCL/pytket-benchmarking
-      - run: ls
-      - run: pip install .
-      - uses: actions/checkout@v4
-      - run: ls
+
+      - name: Install pytket_benchmarking
+        run: pip install .
+
+      - name: Checkout pytket_benchmarking_store
+        uses: actions/checkout@v4
