--- a/.github/workflows/push_test.yml
+++ b/.github/workflows/push_test.yml
@@ -1,6 +1,13 @@
 name: push-tests
-run-name: Push Tests
-on: [push, pull_request]
+run-name: Test all valid suites
+
+on: 
+  pull_request:
+  push:
+  workflow_dispatch:
+  schedule:
+    - cron: 0 0 * * *
+
 jobs:
   check-all-valid:
     runs-on: ubuntu-latest
