Add Pauli gadget circuits

--- a/.github/workflows/push_test.yml
+++ b/.github/workflows/push_test.yml
@@ -4,6 +4,7 @@ run-name: Test all valid suites
 on: 
   pull_request:
   push:
+    branch: main
   workflow_dispatch:
   schedule:
     - cron: 0 0 * * *
