ci: Correct python version

--- a/.github/workflows/push_test.yml
+++ b/.github/workflows/push_test.yml
@@ -21,6 +21,12 @@ jobs:
           ssh-key: ${{ secrets.PYTKET_BENCHMARKING_DEPLOY_KEY }}
           repository: CQCL/pytket-benchmarking
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+          cache: 'pip'
+
       - name: Install pytket_benchmarking
         run: pip install .
 
